tests/ui-msrv/diagnostic-not-implemented-into-bytes.stderr
error[E0277]: the trait bound `NotZerocopy: IntoBytes` is not satisfied
  --> tests/ui-msrv/diagnostic-not-implemented-into-bytes.rs:16:24
   |
16 |     takes_into_bytes::<NotZerocopy>();
   |                        ^^^^^^^^^^^ the trait `IntoBytes` is not implemented for `NotZerocopy`
   |
note: required by a bound in `takes_into_bytes`
  --> tests/ui-msrv/diagnostic-not-implemented-into-bytes.rs:19:24
   |
19 | fn takes_into_bytes<T: IntoBytes>() {}
   |                        ^^^^^^^^^ required by this bound in `takes_into_bytes`
